--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>G3 Architects Home</title>
 </head>
 <body>
-    
+    <!-- header start here -->
+    <header>
+        <div class="nav-container">
+            <h2>G3 Architects Home</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </div>
+        
+    </header>
+    <!-- header ends here -->
+
+    <!-- main starts here -->
+    <main>
+
+    </main>
+    <!-- main ends here -->
+
+    <!-- footer starts here -->
+    <footer>
+
+    </footer>
+    <!-- footer ends here -->
 </body>
 </html>
