--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 <body>
     <!-- header start here -->
     <header>
-        <div class="nav-container">
-            <h2>G3 Architects Home</h2>
+        <nav class="nav-container">
+                <h2 class="nav-title">G3 Architects Home</h2>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="">Login</a></li>
             </ul>
+            
+        </nav>
+        <div class="banner">
+            <div class="banner-container">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-descripton">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="./images/banner.png" alt="">
         </div>
         
     </header>
