--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>G3 Architects Home</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
         </nav>
         <div class="banner">
             <div class="banner-container">
-                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <h1 class="banner-title">Brand New <br>Group of Architects</h1>
                 <p class="banner-descripton">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
@@ -33,7 +33,19 @@
 
     <!-- main starts here -->
     <main>
-
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                <h3 class="team-title"><span class="quick">Quick list</span><samp class="of"> of Our</samp> <span class="features">Features</span></h3>
+                <p class="team-discreption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <!-- main ends here -->
 
