main section and responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="banner">
             <div class="banner-container">
                 <h1 class="banner-title">Brand New <br>Group of Architects</h1>
-                <p class="banner-descripton">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="text-ligth-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration <br> in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img src="./images/banner.png" alt="">
@@ -42,7 +42,7 @@
             </div>
             <div class="teams-content">
                 <h3 class="team-title"><span class="quick">Quick list</span><samp class="of"> of Our</samp> <span class="features">Features</span></h3>
-                <p class="team-discreption">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="text-ligth-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
